# crypto-portfolio-aggregator-backend

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: account_balance.rs  common.rs  mod.rs  portfolio.rs  portfolios.rs
src/models/: account_balance.rs  asset.rs  asset_balance.rs  blockchain.rs  configuration.rs  exchange.rs  mod.rs  portfolio.rs  portfolio_sources.rs  portfolios.rs  server_state.rs
src/services/: binance.rs  blockchain.rs  cardano.rs  ethereum.rs  exchange.rs  kraken.rs  mod.rs
