[package]
name = "crypto-portfolio-aggregator-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
config = "0.13.4"
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
