[package]
name = "crypto-portfolio-aggregator-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
base64 = "0.21.5"
config = "0.13.4"
dotenvy = "0.15.7"
hmac = "0.12.1"
hmac-sha256 = "1.1.7"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.35.0", features = ["full"] }
